4B/cs444/tests/site/fail/fail_instanceinitializers.joos
/* fail: instance initializers */
public class A {
  public int x;
  { x = 42; }
}

